src/objects/SFDC_Script_Header__c.object
<CustomObject>
    <description>Stores summary information for a given call script occurrence</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scripts</relationshipLabel>
        <relationshipName>R00N20000000oz93EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <formula>if( TEXT(YEAR(Date_Taken__c)) = &quot;&quot;, if(Account__c&lt;&gt;&quot;&quot;, HYPERLINK(&quot;/appex/cscript/call.htm?page=account_ex&amp;sid=&quot; &amp; Script__c&amp; &quot;&amp;eid=&quot; &amp; Account__c &amp; &quot;&amp;rid=&quot; &amp;Id , &quot;Take Script&quot;), if(Opportunity__c&lt;&gt;&quot;&quot;, HYPERLINK(&quot;/appex/cscript/call.htm?page=opportunity_ex&amp;sid=&quot; &amp; Script__c&amp; &quot;&amp;eid=&quot; &amp; Opportunity__c &amp; &quot;&amp;rid=&quot; &amp;Id , &quot;Take Script&quot;), if(Lead__c&lt;&gt;&quot;&quot;, HYPERLINK(&quot;/appex/cscript/call.htm?page=lead_ex&amp;sid=&quot; &amp; Script__c&amp; &quot;&amp;eid=&quot; &amp; Lead__c &amp; &quot;&amp;rid=&quot; &amp;Id , &quot;Take Script&quot;), if(Case__c&lt;&gt;&quot;&quot;, HYPERLINK(&quot;/appex/cscript/call.htm?page=case_ex&amp;sid=&quot; &amp; Script__c&amp; &quot;&amp;eid=&quot; &amp; Case__c &amp; &quot;&amp;rid=&quot; &amp;Id , &quot;Take Script&quot;), if(Contact__c&lt;&gt;&quot;&quot;, HYPERLINK(&quot;/appex/cscript/call.htm?page=contact_ex&amp;sid=&quot; &amp; Script__c&amp; &quot;&amp;eid=&quot; &amp; Contact__c &amp; &quot;&amp;rid=&quot; &amp;Id , &quot;Take Script&quot;),&quot;&quot;) )))), HYPERLINK(&quot;/&quot; &amp; Id, &quot;View Results&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Scripts</relationshipLabel>
        <relationshipName>R00N20000000oz94EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scripts</relationshipLabel>
        <relationshipName>R00N20000000oz95EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Taken__c</fullName>
        <label>Date Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015200000002o5K&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help for Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Scripts</relationshipLabel>
        <relationshipName>R00N20000000oz96EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scripts</relationshipLabel>
        <relationshipName>R00N20000000oz97EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The final score for the script.</description>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Script</label>
        <referenceTo>SFDC_Script__c</referenceTo>
        <relationshipLabel>Script Results</relationshipLabel>
        <relationshipName>R00N20000000oz92EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Script Header</label>
    <nameField>
        <displayFormat>SH-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>